fix: auth, accrual type
